tail-extend/tests/ui/need_no_std.stderr
error: Unexpected input
 --> tests/ui/need_no_std.rs:3:33
  |
3 | #[make_dst_builder(create, pub, X)]
  |                                 ^
